--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-Hello world
+<!DOCTYPE html>
+<html>
+<head>
+	<title>You are at .me</title>
+</head>
+<body>
+<nav class="nav has-shadow">
+	<div class="nav-left">
+		<a class="nav-item">Goka</a>	
+	</div>
+	<div class="nav-center">
+		<a class="nav-item">
+	      <span class="icon">
+	        <i class="fa fa-github"></i>
+	      </span>
+	    </a>
+	    <a class="nav-item">
+	      <span class="icon">
+	        <i class="fa fa-facebook"></i>
+	      </span>
+	    </a>
+	    <a class="nav-item">
+	      <span class="icon">
+	        <i class="fa fa-instagram"></i>
+	      </span>
+	    </a>
+  	</div>
+	<div class="nav-right">
+		<a class="nav-item">Home</a>
+		<a class="nav-item">Home</a>
+	</div>
+</nav>
+</body>
+</html>
