Add link to css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>You are at .me</title>
+	<link rel="stylesheet" type="text/css" href="css/bulma.css">
 </head>
 <body>
 <nav class="nav has-shadow">
@@ -26,7 +27,6 @@
 	    </a>
   	</div>
 	<div class="nav-right">
-		<a class="nav-item">Home</a>
 		<a class="nav-item">Home</a>
 	</div>
 </nav>
