--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
 	<title>You are at .me</title>
 	<link rel="stylesheet" type="text/css" href="css/bulma.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
 <body>
-<nav class="nav has-shadow">
+<nav class="nav has-shadow is-dark">
+	<div class="container">
 	<div class="nav-left">
-		<a class="nav-item">Goka</a>	
+		<a class="nav-item is-logo">Goka</a>	
 	</div>
 	<div class="nav-center">
 		<a class="nav-item">
 	      <span class="icon">
-	        <i class="fa fa-github"></i>
+	        <i class="fa white fa-github"></i>
 	      </span>
 	    </a>
 	    <a class="nav-item">
@@ -29,6 +31,29 @@
 	<div class="nav-right">
 		<a class="nav-item">Home</a>
 	</div>
+	</div>
 </nav>
+
+<section class="hero is-dark is-bold is-fullheight">
+  <div class="hero-body">
+    <div class="container">
+      <div class="columns">
+      	<div class="column is-6">
+      		<h1 class="title is-big has-text-right">
+      		  Harshith<br>Goka
+      		</h1>
+      	</div>
+      	<div class="column has-text-centered">
+      		<img src="images/to-be-dp.png" class="circle">
+      	</div>
+      </div>
+    </div>
+  </div>
+</section>
+<section>
+	<p>
+		This is a random paragraph
+	</p>
+</section>
 </body>
 </html>
