--- a/index.html
+++ b/index.html
@@ -1,45 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>You are at .me</title>
 	<link rel="stylesheet" type="text/css" href="css/bulma.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
 <body>
-<nav class="nav has-shadow">
-	<div class="container">
-	<div class="nav-left">
-		<a class="nav-item is-logo">Goka</a>	
-		<a class="nav-item is-tab is-hidden-mobile is-active">Home</a>
-	</div>
-	<div class="nav-center">
-		<a class="nav-item" target="_blank" href="https://github.com/tastelessjolt/">
-	      <span class="icon">
-	        <i class="fa white fa-github"></i>
-	      </span>
-	    </a>
-	    <a class="nav-item" target="_blank" href="https://www.facebook.com/harshithgoka">
-	      <span class="icon">
-	        <i class="fa fa-facebook"></i>
-	      </span>
-	    </a>
-	    <a class="nav-item" target="_blank" href="https://www.instagram.com/ignifies/">
-	      <span class="icon">
-	        <i class="fa fa-instagram"></i>
-	      </span>
-	    </a>
-  	</div>
-	<div class="nav-right mobile nav-menu">
-      <a class="nav-item is-flex-tab is-hidden-tablet is-active">Home</a>
-      <a class="nav-item is-flex-tab is-hidden-tablet">Features</a>
-      <a class="nav-item is-flex-tab is-hidden-tablet">Pricing</a>
-      <a class="nav-item is-flex-tab is-hidden-tablet">About</a>
-    </div>
-	</div>
-</nav>
 
-<section class="hero is-primary is-bold is-fullheight">
-  <div class="container">
+
+<section class="hero is-bold is-fullheight">
+  <div class="hero-head">
+  	<div class="container">
+  		<nav class="nav has-shadow is-mobile">
+  			<div class="container">
+  			<div class="nav-left">
+  				<a class="nav-item is-logo">Goka</a>	
+  			</div>
+  			<div class="nav-center">
+  				<a class="nav-item" target="_blank" href="https://github.com/tastelessjolt/">
+  			      <span class="icon">
+  			        <i class="fa white fa-github"></i>
+  			      </span>
+  			    </a>
+  			    <a class="nav-item" target="_blank" href="https://www.facebook.com/harshithgoka">
+  			      <span class="icon">
+  			        <i class="fa fa-facebook"></i>
+  			      </span>
+  			    </a>
+  			    <a class="nav-item" target="_blank" href="https://www.instagram.com/ignifies/">
+  			      <span class="icon">
+  			        <i class="fa fa-instagram"></i>
+  			      </span>
+  			    </a>
+  		  	</div>
+  		  	<div class="nav-right">
+  				<a class="nav-item is-tab is-hidden-mobile is-active">Home</a>
+  			</div>
+  		  	<span class="nav-toggle">
+  		      <span></span>
+  		      <span></span>
+  		      <span></span>
+  		    </span>
+  			<div class="nav-right mobile nav-menu">
+  		      <a class="nav-item is-flex-tab is-hidden-tablet is-active">Home</a>
+  		      <a class="nav-item is-flex-tab is-hidden-tablet">About me</a>
+  		      <a class="nav-item is-flex-tab is-hidden-tablet">Resume</a>
+  		    </div>
+  			</div>
+
+  		</nav>
+
+  	</div>	
+  </div>
+  	<div class="container">
     <div class="notification is-primary">
       <button class="delete"></button>
       You are at my homepage. You can know all kinds of things
@@ -50,7 +66,7 @@
     <div class="container">	
       <div class="columns">
       	<div class="column is-6">
-      		<!-- <img src="dp.jpg"> -->
+      		
       	</div>
       	<div class="column is-6">
       		<h1 class="title is-big ">
@@ -62,9 +78,51 @@
   </div>
 </section>
 <section>
-	<p>
-		This is a random paragraph
-	</p>
+	<div class="tile is-ancestor">
+  <div class="tile is-vertical is-8">
+    <div class="tile">
+      <div class="tile is-parent is-vertical">
+        <article class="tile is-child notification is-primary">
+          <p class="title">Vertical...</p>
+          <p class="subtitle">Top tile</p>
+        </article>
+        <article class="tile is-child notification is-warning">
+          <p class="title">...tiles</p>
+          <p class="subtitle">Bottom tile</p>
+        </article>
+      </div>
+      <div class="tile is-parent">
+        <article class="tile is-child notification is-info">
+          <p class="title">Middle tile</p>
+          <p class="subtitle">With an image</p>
+          <figure class="image is-4by3">
+            <img src="http://bulma.io/images/placeholders/640x480.png">
+          </figure>
+        </article>
+      </div>
+    </div>
+    <div class="tile is-parent">
+      <article class="tile is-child notification is-danger">
+        <p class="title">Wide tile</p>
+        <p class="subtitle">Aligned with the right tile</p>
+        <div class="content">
+          <!-- Content -->
+        </div>
+      </article>
+    </div>
+  </div>
+  <div class="tile is-parent">
+    <article class="tile is-child notification is-success">
+      <div class="content">
+        <p class="title">Tall tile</p>
+        <p class="subtitle">With even more content</p>
+        <div class="content">
+          <!-- Content -->
+        </div>
+      </div>
+    </article>
+  </div>
+</div>
 </section>
 </body>
 </html>
