Resume add, color change

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   		<nav class="nav has-shadow is-mobile">
   			<div class="container">
   			<div class="nav-left">
-  				<a class="nav-item is-logo">Goka</a>	
+  				<a class="nav-item is-logo is-hidden-touch">Goka</a>	
+  				<a class="nav-item is-hidden-desktop"><p class="title">Goka</p></a>
   			</div>
   			<div class="nav-center">
   				<a class="nav-item" target="_blank" href="https://github.com/tastelessjolt/">
@@ -36,18 +37,17 @@
   			      </span>
   			    </a>
   		  	</div>
-  		  	<div class="nav-right">
-  				<a class="nav-item is-tab is-hidden-mobile is-active">Home</a>
-  			</div>
+  		  	<!-- <div class="nav-right is-hidden-mobile">
+  				<a class="nav-item is-tab is-active">Home</a>
+  			</div> -->
   		  	<span class="nav-toggle">
   		      <span></span>
   		      <span></span>
   		      <span></span>
   		    </span>
-  			<div class="nav-right mobile nav-menu">
-  		      <a class="nav-item is-flex-tab is-hidden-tablet is-active">Home</a>
-  		      <a class="nav-item is-flex-tab is-hidden-tablet">About me</a>
-  		      <a class="nav-item is-flex-tab is-hidden-tablet">Resume</a>
+  			<div class="nav-right nav-menu">
+  		      <a class="nav-item is-active">Home</a>
+  		      <a class="nav-item" href="documents/resume.pdf" target="_blank">Resume</a>
   		    </div>
   			</div>
 
@@ -55,13 +55,13 @@
 
   	</div>	
   </div>
-  	<div class="container">
+  	<!-- <div class="container">
     <div class="notification is-primary">
       <button class="delete"></button>
       You are at my homepage. You can know all kinds of things
       about me here.
     </div>
-   </div>
+   </div> -->
   <div class="hero-body">
     <div class="container">	
       <div class="columns">
