mobile nav bar working and add jquery and clipboard js

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
   		  	<!-- <div class="nav-right is-hidden-mobile">
   				<a class="nav-item is-tab is-active">Home</a>
   			</div> -->
-  		  	<span class="nav-toggle">
+  		  	<span id="nav-toggle" class="nav-toggle">
   		      <span></span>
   		      <span></span>
   		      <span></span>
   		    </span>
-  			<div class="nav-right nav-menu">
+  			<div id="nav-menu" class="nav-right nav-menu">
   		      <a class="nav-item is-active">Home</a>
   		      <a class="nav-item" href="documents/resume.pdf" target="_blank">Resume</a>
   		    </div>
@@ -77,5 +77,10 @@
     </div>
   </div>
 </section>
+
+
+<script src="js/jquery-2.2.0.min.js"></script>
+<script src="js/clipboard.min.js"></script>
+<script src="js/nav.js"></script>
 </body>
 </html>
