--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
   			<div class="nav-left">
   				<!-- <a class="nav-item is-logo is-hidden-touch">Goka</a>	 -->
   				<!-- <a class="nav-item is-hidden-desktop"><p class="title">Goka</p></a> -->
-          <a class="nav-item is-hidden-touch" href="#"><img src="logo.jpg"/> </a>
-          <a class="nav-item is-hidden-desktop" href="#"><img src="logo.jpg"/> </a>
+          <a class="nav-item" href="#"><img src="logo.jpg"/> </a>
   			</div>
   			<div class="nav-center">
   				<a class="nav-item" target="_blank" href="https://github.com/tastelessjolt/">
