--- a/about.html
+++ b/about.html
@@ -64,18 +64,7 @@
     </div>
    </div>
   <div class="hero-body">
-    <div class="container">	
-      <div class="columns">
-      	<div class="column is-6">
-      		
-      	</div>
-      	<div class="column is-6">
-      		<h1 class="title is-big ">
-      		  Harshith<br>Goka
-      		</h1>
-      	</div>
-      </div>
-    </div>
+    
   </div>
 </section>
 
@@ -93,7 +82,7 @@
     if(name == 'home') { name = 'index'; }
     jQuery.ajax('http://harshithgoka.me/' + name + '.html').done(function(data) {
       $('.hero-body').replaceWith($(data).find('.hero-body'));
-      console.log(this);
+      console.log();
     });
 
     $('.is-active').removeClass('is-active');
