--- a/index.html
+++ b/index.html
@@ -64,18 +64,7 @@
     </div>
    </div>
   <div class="hero-body">
-    <div class="container">	
-      <div class="columns">
-      	<div class="column is-6">
-      		
-      	</div>
-      	<div class="column is-6">
-      		<h1 class="title is-big ">
-      		  Harshith<br>Goka
-      		</h1>
-      	</div>
-      </div>
-    </div>
+    
   </div>
 </section>
 
@@ -83,23 +72,6 @@
 <script src="js/jquery-2.2.0.min.js"></script>
 <script src="js/clipboard.min.js"></script>
 <script src="js/nav.js"></script>
-<script type="text/javascript">
-  $('.delete').click(function() {
-    $(this).parent().detach();
-  });
-
-  $('.get').click(function() {
-    var name = $(this).text().toLowerCase();
-    if(name == 'home') { name = 'index'; }
-    jQuery.ajax('http://harshithgoka.me/' + name + '.html').done(function(data) {
-      $('.hero-body').replaceWith($(data).find('.hero-body'));
-      console.log(this);
-    });
-
-    $('.is-active').removeClass('is-active');
-    $(this).addClass('is-active');
-
-  });
-</script>
+<script src="js/main.js"></script>
 </body>
 </html>
