update status as under construction

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
   	<div class="container">
     <div class="notification is-primary">
       <button class="delete"></button>
-      You are at my homepage. You can know all kinds of things
-      about me here.
+      Under construction.
     </div>
    </div>
   <div class="hero-body">
