add link to blog

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     		      <a class="nav-item get is-active">Home</a>
               <a class="nav-item get" href="#">About</a>
               <a class="nav-item get" href="#">Projects</a>
-              <a class="nav-item get" href="#">Blog</a>
+              <a class="nav-item" href="blog">Blog</a>
               <a class="nav-item get" href="documents/resume.pdf" target="_blank">Resume</a>
   		    </div>
   			</div>
