--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a class="nav-item get" href="#">About</a>
               <a class="nav-item get" href="#">Projects</a>
               <a class="nav-item" href="blog">Blog</a>
-              <a class="nav-item get" href="documents/resume.pdf" target="_blank">Resume</a>
+              <a class="nav-item" href="documents/resume.pdf" target="_blank">Resume</a>
   		    </div>
   			</div>
 
