--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   			<div id="nav-menu" class="nav-right nav-menu">
     		      <a class="nav-item get is-active">Home</a>
               <a class="nav-item get" href="#">About</a>
-              <a class="nav-item get" href="#">Projects</a>
+              <!-- <a class="nav-item get" href="#">Projects</a> -->
               <a class="nav-item" href="blog">Blog</a>
               <a class="nav-item" href="documents/resume.pdf" target="_blank">Resume</a>
   		    </div>
