--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
   			<div id="nav-menu" class="nav-right nav-menu">
     		      <a class="nav-item get is-active">Home</a>
               <a class="nav-item get" href="#">About</a>
-              <!-- <a class="nav-item get" href="#">Projects</a> -->
-              <a class="nav-item" href="blog">Blog</a>
+              <a class="nav-item get" href="http://github.com/tastelessjolt/youtube-dl-android/releases/latest">YoutubeDL</a>
+              <!-- <a class="nav-item" href="blog">Blog</a> -->
               <a class="nav-item" href="documents/resume.pdf" target="_blank">Resume</a>
   		    </div>
   			</div>
@@ -57,10 +57,10 @@
   		</nav>	
   </div>
   	<div class="container">
-    <div class="notification is-primary">
+    <!-- <div class="notification is-primary">
       <button class="delete"></button>
       Under construction.
-    </div>
+    </div> -->
    </div>
   <div class="hero-body">
     
@@ -71,15 +71,5 @@
 <script src="js/jquery-2.2.0.min.js"></script>
 <script src="js/clipboard.min.js"></script>
 <script src="js/main.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-106154549-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 </body>
 </html>
