--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 
-	<section class="hero is-bold is-fullheight" style="background-image: url('images/bg.png');">
+	<section class="hero is-bold is-fullheight" style="background-image: url('images/bg.jpg');">
 		<div class="hero-head">
 			<nav class="nav has-shadow is-mobile">
 				<div class="container">
